"""add analytics tables

Revision ID: d3e492f10d22
Revises: 76ca4eae3548
Create Date: 2026-04-02 16:37:31.199863

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'd3e492f10d22'
down_revision: Union[str, None] = '76ca4eae3548'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('footfall_logs',
    sa.Column('log_id', sa.String(), nullable=False),
    sa.Column('camera_id', sa.String(), nullable=False),
    sa.Column('count', sa.Integer(), nullable=False),
    sa.Column('timestamp', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['camera_id'], ['cameras.camera_id'], ),
    sa.PrimaryKeyConstraint('log_id')
    )
    op.create_table('heatmap_points',
    sa.Column('id', sa.String(), nullable=False),
    sa.Column('camera_id', sa.String(), nullable=False),
    sa.Column('x_normalized', sa.Float(), nullable=False),
    sa.Column('y_normalized', sa.Float(), nullable=False),
    sa.Column('timestamp', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['camera_id'], ['cameras.camera_id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('person_events',
    sa.Column('event_id', sa.String(), nullable=False),
    sa.Column('camera_id', sa.String(), nullable=False),
    sa.Column('person_id', sa.Integer(), nullable=False),
    sa.Column('entry_time', sa.DateTime(), nullable=False),
    sa.Column('exit_time', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['camera_id'], ['cameras.camera_id'], ),
    sa.PrimaryKeyConstraint('event_id')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('person_events')
    op.drop_table('heatmap_points')
    op.drop_table('footfall_logs')
    # ### end Alembic commands ###
